2012-08-15  Roland McGrath  <roland@hack.frob.com>

	* include/dirent.h: Declare __getdirentries.

	* sysdeps/posix/system.c (do_system): Cast SUB_REF () to void when not
	using its value, to avoid warnings in the [!_LIBC_REENTRANT] case.

2012-08-14  Mike Frysinger  <vapier@gentoo.org>

	* config.h.in (HAVE_CPP_ASM_DEBUGINFO): Delete.
	* sysdeps/i386/configure.in: Remove assembler-with-cpp debug check.
	* sysdeps/i386/configure: Regenerated.
	* sysdeps/i386/sysdep.h (ENTRY): Remove calls to STABS_CURRENT_FILE1,
	STABS_CURRENT_FILE, and STABS_FUN.
	(END): Remove call to STABS_FUN_END.
	(STABS_CURRENT_FILE1): Delete.
	(STABS_CURRENT_FILE): Likewise.
	(STABS_FUN): Likewise.
	(STABS_FUN_END): Likewise.
	(STABS_FUN2): Likewise.
	* sysdeps/x86_64/configure.in: Remove assembler-with-cpp debug check.
	* sysdeps/x86_64/configure: Regenerated.

2012-08-14  Roland McGrath  <roland@hack.frob.com>

	* elf/dl-open.c: Include <atomic.h>.
	* elf/dl-lookup.c: Likewise.

2012-08-14  Joseph Myers  <joseph@codesourcery.com>

	* sysdeps/unix/sysv/linux/kernel-features.h
	(__ASSUME_CLONE_THREAD_FLAGS): Remove.
	* sysdeps/unix/sysv/linux/s390/system.c (FORK): Define
	unconditionally.
	* sysdeps/unix/sysv/linux/sparc/system.c (FORK): Define
	unconditionally.
	* sysdeps/unix/sysv/linux/system.c [!FORK] (FORK): Do not
	condition on __ASSUME_CLONE_THREAD_FLAGS.

2012-08-14  Andreas Jaeger  <aj@suse.de>

	* sysdeps/i386/fpu/libm-test-ulps: Update.

2012-08-13  Maxim Kuvyrkov  <maxim@codesourcery.com>

	* include/atomic.h (atomic_exchange_and_add): Split into ...
	(atomic_exchange_and_add_acq, atomic_exchange_and_add_rel): ... these.
	New atomic macros.

2012-08-13  Markus Trippelsdorf  <markus@trippelsdorf.de>

	* sysdeps/x86_64/fpu/libm-test-ulps: Update.

2012-08-13  Jeff Law <law@redhat.com>

	* manual/stdio.texi (snprintf): Clarify handling of the trailing
	null byte in the output string.

2012-08-10  Joseph Myers  <joseph@codesourcery.com>

	* sysdeps/unix/sysv/linux/kernel-features.h